# space-explorer

./: CLAUDE.md  CMakeLists.txt  imgui.ini
.claude/: settings.local.json
include/: Camera.h  CubeSphere.h  Engine.h  Planet.h  PlanetManager.h
src/core/: main.cpp
src/entities/: camera.cpp  camera.h  cubesphere.cpp  cubesphere.h  planet.cpp  planet.h  planetManager.cpp  planetManager.h
src/graphics/: displayManager.cpp  displayManager.h  shader.h
